# csharp_roslyn

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TESTING.md  UNITY-SUPPORT.md  UNITY-implementation-plan.md  build.rs  extension.toml  test_semantic_tokens.py
.serena/: project.yml
debug_adapter_schemas/: netcoredbg.json
languages/csharp/: brackets.scm  config.toml  highlights.scm  indents.scm
proxy/: Cargo.toml
proxy/src/: connection.rs  id_mapper.rs  main.rs  message.rs  router.rs
proxy/src/middleware/: capability_registration.rs  configuration.rs  custom.rs  definition_logger.rs  diagnostics.rs  document_lifecycle.rs  initialization.rs  inlay_hints.rs  mod.rs  project_restore.rs  refresh.rs  solution_loader.rs
src/: csharp.rs  debugger.rs  lib.rs  logging.rs  nuget.rs  omnisharp_download.rs  project_info.rs  roslyn_download.rs  wrapper_download.rs
tests/: lsp_features_test.rs
