[package]
name = "roslyn-lsp-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roslyn-lsp-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.95"
dashmap = "5.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.42"

[dev-dependencies]
tokio-test = "0.4"
